# POS_Insight

./: .env.example  .gitignore  CLAUDE.md  POWERBI_IMPORT_SETUP.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: dim_store_candidates_after_refill.csv  dim_store_candidates_remaining_after_refill.csv  import_non_success_2020_2025.csv  import_non_success_after_refill_2020_2025.csv  import_non_success_dates_2020_2025.csv  import_remaining_non_success_after_refill_2020_2025.csv  import_remaining_non_success_dates_after_refill_2020_2025.csv  parse_preview_2025-12-31.csv  temporary_stall_skipped_dates.csv  unknown_name_date_distribution_after_refill.csv  verification_2020_2025_import_summary.txt  verification_2020_2025_powerbi_ready.txt  verification_daily_mtd_mismatch_2020_2025.csv
db/: apply_seed_stores.py  etl_sokuho_import_resolution.sql  migrate_dim_store_codes.sql  schema.sql  seed_stores.sql
etl/: loader.py  pdf_parser.py  sokuho_import_overrides.yaml  sokuho_overrides.py  transformer.py
